fixed spacing issues on mobile

--- a/styles/app.module.scss
+++ b/styles/app.module.scss
@@ -182,6 +182,7 @@
     transform: translate(-50%, -50%);
     padding: 0 1rem;
     background-color: white;
+    white-space: nowrap;
   }
 
   >hr {
@@ -208,6 +209,7 @@
     transform: translate(-50%, -50%);
     padding: 0 1rem;
     background-color: #404040;
+    white-space: nowrap;
   }
 
   >hr {
@@ -326,21 +328,21 @@
 
 .projectContent {
   flex-direction: column;
-  padding: 2rem;
 
   @media screen and (min-width: 992px) {
     display: flex;
     flex-direction: row;
+    padding: 2rem;
   }
 }
 
 .projectContentDark {
   flex-direction: column;
-  padding: 2rem;
 
   @media screen and (min-width: 992px) {
     display: flex;
     flex-direction: row;
+    padding: 2rem;
   }
 }
 
@@ -383,25 +385,25 @@
     position: absolute;
 
     >img {
-      width: 30rem;
+      width: 25vw;
     }
   
     &:nth-child(1n) {
-      left: 5rem;
+      left: 5vw;
       top: .5rem;
       z-index: 2;
       display: block;
     }
   
     &:nth-child(2n) {
-      left: 10rem;
+      left: 10vw;
       top: 2.5rem;
       z-index: 3;
       display: block;
     }
   
     &:nth-child(3n) {
-      left: 15rem;
+      left: 15vw;
       top: 4.5rem;
       z-index: 1;
       display: block;
@@ -434,25 +436,25 @@
     position: absolute;
 
     >img {
-      width: 30rem;
+      width: 25vw;
     }
   
     &:nth-child(1n) {
-      left: 5rem;
+      left: 5vw;
       top: .5rem;
       z-index: 2;
       display: block;
     }
   
     &:nth-child(2n) {
-      left: 10rem;
+      left: 10vw;
       top: 2.5rem;
       z-index: 3;
       display: block;
     }
   
     &:nth-child(3n) {
-      left: 15rem;
+      left: 15vw;
       top: 4.5rem;
       z-index: 1;
       display: block;
@@ -465,7 +467,6 @@
 }
 
 .projectText {
-  width: 100%;
   background-color: white;
   border-radius: 20px;
   color: #404040;
@@ -490,7 +491,6 @@
 .projectTextDark {
   border: 2px solid white;
   border-radius: 20px;
-  width: 100%;
   background-color: #606060;
   padding: 1rem;
   display: flex;
@@ -574,6 +574,7 @@
   font-size: 1.25rem;
   text-align: center;
   max-width: 992px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -591,25 +592,22 @@
 }
 
 .formControl {
-  width: 100%;
-  padding: 0 2rem;
-
   >label {
     display: none;
   }
 
   >input,textarea {
-    width: 100%;
     font-size: 1.25rem;
     padding: .5rem 1rem;
     resize: none;
   }
+
+  @media screen and (min-width: 992px) {
+    padding: 0 2rem;
+  }
 }
 
 .formControlDark {
-  width: 100%;
-  padding: 0 2rem;
-
   >label {
     display: none;
   }
@@ -617,7 +615,6 @@
   >input,textarea {
     background-color: #808080;
     color: white;
-    width: 100%;
     font-size: 1.25rem;
     padding: .5rem 1rem;
     resize: none;
